kibana/ingress-kibana/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elastic-stack
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kibana.dispara.ai
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana-kb-http
            port:
              number: 5601
